Fix page/dropdowns being cropped if height is too small

--- a/BDTest.NetCore.Razor.ReportMiddleware/wwwroot/css/BDTest.css
+++ b/BDTest.NetCore.Razor.ReportMiddleware/wwwroot/css/BDTest.css
@@ -213,6 +213,10 @@ hr.rounded {
 	margin-left: 250px;
 }
 
+html, body, .main-body {
+	height: 100%;
+}
+
 
 /* Burger Sidebar Menu */
 
